# llvm-pass-cpp-rust

./: CMakeLists.txt  README.md  flake.nix
project-rs/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
project-rs/bindings/: project-rs.hpp
project-rs/src/: lib.rs
src/: CMakeLists.txt  Pass.cpp
