[package]
name = "project-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
# https://github.com/lizhuohua/rust-ffi-checker/issues/1#issuecomment-1286469596
llvm-sys = { version = "*", features = ["no-llvm-linking"] }

[build-dependencies]
cbindgen = "0.26.0"

[lib]
crate-type = ["staticlib"]
